centralized-cluster/cluster-configuration/service-mesh-config/expose-services.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: cross-cluster-network-gateway
  namespace: istio-system
spec:
  selector:
    istio: eastwestgateway
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      tls:
        mode: AUTO_PASSTHROUGH
      hosts:
        - "*.local"

---

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: fleetman-service-entry
  namespace: default
spec:
  hosts:
  - fleetman-vehicle-telemetry.default.svc.cluster.local
  - fleetman-staff-service.default.svc.cluster.local
  - fleetman-webapp.default.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  endpoints:
  - address: <PLATFORM_EASTWESTGATEWAY_FQDN> # Update the EASTWESTGATEWAY_FQDN with the actual FQDN of the east-west gateway in the remote cluster
    ports:
      http: 15443
    labels:
      topology.istio.io/network: platform-vpc

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cross-cluster-mtls
  namespace: default
spec:
  host: "*.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  exportTo:
  - "."
