centralized-cluster/cluster-configuration/service-mesh-config/kiali.yaml
---
# Source: kiali-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiali
  namespace: "istio-system"
  labels:
    
    helm.sh/chart: kiali-server-2.21.0
    app: kiali
    app.kubernetes.io/name: kiali
    app.kubernetes.io/instance: kiali
    version: "v2.21.0"
    app.kubernetes.io/version: "v2.21.0"
    app.kubernetes.io/part-of: "kiali"
  annotations:
spec:
  type: NodePort
  ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 20001
  - name: http-metrics
    appProtocol: http
    protocol: TCP
    port: 9090
  selector:
    app.kubernetes.io/name: kiali
    app.kubernetes.io/instance: kiali
...
---
# Source: kiali-server/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiali
  namespace: "istio-system"
  labels:
    
    helm.sh/chart: kiali-server-2.21.0
    app: kiali
    app.kubernetes.io/name: kiali
    app.kubernetes.io/instance: kiali
    version: "v2.21.0"
    app.kubernetes.io/version: "v2.21.0"
    app.kubernetes.io/part-of: "kiali"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kiali
      app.kubernetes.io/instance: kiali
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      name: kiali
      labels:
        
        helm.sh/chart: kiali-server-2.21.0
        app: kiali
        app.kubernetes.io/name: kiali
        app.kubernetes.io/instance: kiali
        version: "v2.21.0"
        app.kubernetes.io/version: "v2.21.0"
        app.kubernetes.io/part-of: "kiali"
        sidecar.istio.io/inject: "false"
      annotations:
        checksum/config: 35ac15457de3a25040e953fa6178396e95991865aed21cb1bd8c131c5d3a81c7
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/scheme: "http"
        kiali.io/dashboards: go,kiali
        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
    spec:
      serviceAccountName: kiali
      containers:
      - image: "quay.io/kiali/kiali:v2.21"
        imagePullPolicy: IfNotPresent
        name: kiali
        command:
        - "/opt/kiali/kiali"
        - "-config"
        - "/kiali-configuration/config.yaml"
        terminationMessagePolicy: FallbackToLogsOnError
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
        ports:
        - name: api-port
          containerPort: 20001
        - name: http-metrics
          containerPort: 9090
        readinessProbe:
          httpGet:
            path: /kiali/healthz
            port: api-port
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: /kiali/healthz
            port: api-port
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 30
        startupProbe:
          httpGet:
            path: /kiali/healthz
            port: api-port
            scheme: HTTP
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - name: kiali-configuration
          mountPath: "/kiali-configuration"
        - name: kiali-cert
          mountPath: "/kiali-cert"
        - name: kiali-secret
          mountPath: "/kiali-secret"
        - name: kiali-cabundle
          mountPath: "/kiali-cabundle"
        - name: "kiali-multi-cluster-secret"
          mountPath: "/kiali-remote-cluster-secrets/kiali-multi-cluster-secret"
          readOnly: true
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 10m
            memory: 64Mi
      volumes:
      - name: kiali-configuration
        configMap:
          name: kiali
      - name: kiali-cert
        secret:
          secretName: istio.kiali-service-account
          optional: true
      - name: kiali-secret
        secret:
          secretName: kiali
          optional: true
      - name: kiali-cabundle
        configMap:
          name: kiali-cabundle
          optional: true
      - name: "kiali-multi-cluster-secret"
        secret:
          secretName: "kiali-multi-cluster-secret"
          optional: true

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shared-ingress-resources
  namespace: istio-system
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: shared-external-alb
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /usermgmt/health-status
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    # SSL Annotations
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
    # alb.ingress.kubernetes.io/listen-ports: [{'HTTPS':443, 'HTTP':80}]
    # alb.ingress.kubernetes.io/certificate-arn:
    # Ingress Groups
    # alb.ingress.kubernetes.io/group.name: app-ingress-group
    # alb.ingress.kubernetes.io/group.order: '30'
spec:
  ingressClassName: observability-alb-ingress-class
  defaultBackend:
    service:
      name: prometheus
      port:
        number: 9090
  rules:
  - http:
      paths:
      - path: /kiali
        pathType: Prefix
        backend:
          service:
            name: kiali
            port:
              number: 20001
